k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
 namespace: devops-capstone
spec:
 replicas: 1

 selector:
   matchLabels:
     app: backend

 template:
   metadata:
     labels:
       app: backend

   spec:
     containers:
       - name: backend
         image: 293930531475.dkr.ecr.us-east-1.amazonaws.com/devops-capstone-backend:1.0

         ports:
           - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
 name: backend
 namespace: devops-capstone
spec:
 selector:
   app: backend

 ports:
   - port: 8000
     targetPort: 8000

 type: ClusterIP
