k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend
 namespace: devops-capstone
spec:
 replicas: 1

 selector:
   matchLabels:
     app: frontend

 template:
   metadata:
     labels:
       app: frontend

   spec:
     containers:
       - name: frontend
         image: 293930531475.dkr.ecr.us-east-1.amazonaws.com/devops-capstone-frontend:1.0

         ports:
           - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
 name: frontend
 namespace: devops-capstone
spec:
 selector:
   app: frontend

 ports:
   - port: 80
     targetPort: 3000

 type: ClusterIP
