k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: devops-capstone
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql


      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: postgres-init
          configMap:
             name: postgres-init

---
apiVersion: v1
kind: Service
metadata:
 name: postgres
 namespace: devops-capstone
spec:
 selector:
   app: postgres

 ports:
   - port: 5432
     targetPort: 5432

 type: ClusterIP
