k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-capstone
  namespace: devops-capstone

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/transforms.backend: >
      [{
        "type": "url-rewrite",
        "urlRewriteConfig": {
          "rewrites": [
            {
              "regex": "^/api/(.+)$",
              "replace": "/$1"
            }
          ]
        }
      }]

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
